# Predictlymarkets

./: .env.example  .gitignore  CHECKLIST.md  DEV_SETUP.md  IMPLEMENTATION_SUMMARY.md  Readme  docker-compose.yml
.github/agents/: architect.agent.md  fullstack.agent.md
.github/workflows/: ci.yml
backend/: Dockerfile.dev  pyproject.toml
backend/app/: config.py  db.py  lmsr.py  main.py  models.py  schemas.py
frontend/: Dockerfile.dev
