[project]
name = "predictly-backend"
version = "0.1.0"
description = "Prediction markets backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary",
    "redis>=5.0.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

